Fixes overflow properties of eventThumb and view, adds char limit to form

--- a/src/App.css
+++ b/src/App.css
@@ -149,7 +149,7 @@ html, body {
     transition: transform 0.3s;
     width: 16rem;
     height: 20rem;
-
+    overflow-wrap: break-word;
     display: inline-block;
 }
 
@@ -169,11 +169,13 @@ html, body {
 }
 
 .event-list-entry.left {
+    padding: 0;
     margin-right: 0.5rem;
     transform: perspective(15rem) rotateY(25deg);
 }
 
 .event-list-entry.right {
+    padding: 0;
     margin-left: 0.5rem;
     transform: perspective(15rem) rotateY(-25deg);
 }
@@ -230,6 +232,7 @@ html, body {
     -webkit-text-stroke: 0.05rem #504945;
     margin-left: 0.5rem;
     text-wrap: wrap;
+    width: 100%;
 }
 
 .event-thumb > p {
@@ -384,12 +387,14 @@ html, body {
     border-top-left-radius: 0.4rem;
     border-top-right-radius: 0.4rem;
     width: 100%;
-    height: 5rem;
+    min-height: 5rem;
     display: flex;
 }
 
 .event-view > header > h1 {
+    width: 80%;
     margin-left: 0.5rem;
+    overflow-wrap: break-word;
 }
 
 .event-view-details {
